--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -1414,13 +1414,13 @@ config RTC_DRV_MOXART
 	   will be called rtc-moxart
 
 config RTC_DRV_QPNP
-	tristate "Qualcomm QPNP PMIC RTC"
-	depends on (SPMI || MSM_SPMI) && OF_SPMI && MSM_QPNP_INT
+	tristate "Qualcomm Technologies, Inc. QPNP PMIC RTC"
+	depends on SPMI
 	help
-	  Say Y here if you want to support the Qualcomm QPNP PMIC RTC.
-
-	  To compile this driver as a module, choose M here: the
-	  module will be called qpnp-rtc.
+	  This enables support for the RTC found on Qualcomm Technologies, Inc.
+	  QPNP PMIC chips.  This driver supports using the PMIC RTC peripheral
+	  to wake a mobile device up from suspend or to wake it up from power-
+	  off.
 
 config RTC_DRV_XGENE
 	tristate "APM X-Gene RTC"
