--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -4638,3 +4638,4 @@ CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 CONFIG_SBITMAP=y
 # CONFIG_STRICT_MEMORY_RWX is not set
+CONFIG_THUNDERPLUG_CONTROL=y
