:sparkles: hotplug: Added Thunderplug hotplug
Signed-off-by: mostafa-z <mostafazarghami@gmail.com>

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -1115,6 +1115,8 @@ endmenu
 
 source "net/Kconfig"
 
+source "arch/arm64/hotplug/Kconfig"
+
 source "drivers/Kconfig"
 
 source "drivers/firmware/Kconfig"
