--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -1049,6 +1049,12 @@ CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_HAVE_BPF_JIT=y
 
 #
+# Custom Hotplug drivers
+#
+CONFIG_CUSTOM_HOTPLUG=y
+CONFIG_THUNDERPLUG_CONTROL=y
+
+#
 # Device Drivers
 #
 
@@ -4624,4 +4630,3 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
-CONFIG_THUNDERPLUG_CONTROL=y
