:zap: Enabled Thunderplug in santoni_defconfig

--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -1103,6 +1103,12 @@ CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_HAVE_BPF_JIT=y
 
 #
+# Custom Hotplug drivers
+#
+CONFIG_CUSTOM_HOTPLUG=y
+CONFIG_THUNDERPLUG_CONTROL=y
+
+#
 # Device Drivers
 #
 
@@ -4638,4 +4644,3 @@ CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 CONFIG_SBITMAP=y
 # CONFIG_STRICT_MEMORY_RWX is not set
-CONFIG_THUNDERPLUG_CONTROL=y
