--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -1107,7 +1107,7 @@ CONFIG_HAVE_BPF_JIT=y
 #
 CONFIG_CUSTOM_HOTPLUG=y
 CONFIG_THUNDERPLUG_CONTROL=y
-
+CONFIG_ALUCARD_CONTROL=y
 #
 # Device Drivers
 #
