--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -1053,7 +1053,7 @@ CONFIG_HAVE_BPF_JIT=y
 #
 CONFIG_CUSTOM_HOTPLUG=y
 CONFIG_THUNDERPLUG_CONTROL=y
-
+CONFIG_ALUCARD_CONTROL=y
 #
 # Device Drivers
 #
