config use config changes by build script
Signed-off-by: mostafa-z <mostafazarghami@gmail.com>

--- a/arch/arm64/configs/gabriel_defconfig
+++ b/arch/arm64/configs/gabriel_defconfig
@@ -1104,7 +1104,7 @@ CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_RFKILL=y
 CONFIG_RFKILL_PM=y
 CONFIG_RFKILL_LEDS=y
-# CONFIG_RFKILL_INPUT is not set
+CONFIG_RFKILL_INPUT=y
 # CONFIG_RFKILL_REGULATOR is not set
 # CONFIG_RFKILL_GPIO is not set
 # CONFIG_NET_9P is not set
@@ -2019,7 +2019,7 @@ CONFIG_MSM_SMD_PKT=y
 # CONFIG_XILLYBUS is not set
 CONFIG_MSM_ADSPRPC=y
 # CONFIG_MSM_MDSP_TS is not set
-CONFIG_MSM_RDBG=y
+# CONFIG_MSM_RDBG is not set
 
 #
 # I2C support
@@ -2918,7 +2918,7 @@ CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_SSD1307 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
-CONFIG_LCD_CLASS_DEVICE=y
+# CONFIG_LCD_CLASS_DEVICE is not set
 # CONFIG_LCD_L4F00242T03 is not set
 # CONFIG_LCD_LMS283GF05 is not set
 # CONFIG_LCD_LTV350QV is not set
@@ -2932,7 +2932,7 @@ CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_AMS369FG06 is not set
 # CONFIG_LCD_LMS501KF03 is not set
 # CONFIG_LCD_HX8357 is not set
-CONFIG_BACKLIGHT_CLASS_DEVICE=y
+# CONFIG_BACKLIGHT_CLASS_DEVICE is not set
 CONFIG_BACKLIGHT_GENERIC=y
 # CONFIG_BACKLIGHT_PWM is not set
 # CONFIG_BACKLIGHT_ADP8860 is not set
