--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.113 Kernel Configuration
+# Linux/arm64 3.18.131 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -51,7 +51,7 @@ CONFIG_SWAP=y
 # CONFIG_POSIX_MQUEUE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_FHANDLE is not set
-CONFIG_USELIB=n
+# CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 CONFIG_HAVE_ARCH_AUDITSYSCALL=y
 CONFIG_AUDITSYSCALL=y
@@ -169,6 +169,7 @@ CONFIG_SYSCTL_EXCEPTION_TRACE=y
 CONFIG_BPF=y
 CONFIG_EXPERT=y
 CONFIG_UID16=y
+CONFIG_MULTIUSER=y
 # CONFIG_SGETMASK_SYSCALL is not set
 CONFIG_SYSFS_SYSCALL=y
 # CONFIG_SYSCTL_SYSCALL is not set
@@ -187,6 +188,7 @@ CONFIG_SHMEM=y
 CONFIG_AIO=y
 CONFIG_ADVISE_SYSCALLS=y
 CONFIG_PCI_QUIRKS=y
+CONFIG_MEMBARRIER=y
 CONFIG_EMBEDDED=y
 CONFIG_HAVE_PERF_EVENTS=y
 CONFIG_PERF_USE_VMALLOC=y
@@ -202,7 +204,6 @@ CONFIG_COMPAT_BRK=y
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_SYSTEM_TRUSTED_KEYRING=y
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
 # CONFIG_JUMP_LABEL is not set
@@ -564,6 +565,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARD is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONFISH is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHED is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARDSCHED is not set
@@ -578,6 +580,7 @@ CONFIG_CPU_FREQ_GOV_GABRIELPLUS=y
 CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
+CONFIG_CPU_FREQ_GOV_LIONFISH=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SCHED=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
@@ -617,6 +620,8 @@ CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 CONFIG_NET_KEY_MIGRATE=y
 CONFIG_INET=y
+CONFIG_WIREGUARD=y
+# CONFIG_WIREGUARD_DEBUG is not set
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 # CONFIG_IP_FIB_TRIE_STATS is not set
@@ -2271,6 +2276,7 @@ CONFIG_BATTERY_BCL=y
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
 # CONFIG_DISABLE_TEMP_PROTECT is not set
+CONFIG_QNS_SYSTEM=y
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO is not set
 # CONFIG_POWER_RESET_GPIO_RESTART is not set
@@ -3535,6 +3541,7 @@ CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_QPNP=y
 CONFIG_LEDS_QPNP_FLASH=y
 CONFIG_LEDS_QPNP_WLED=y
+# CONFIG_LEDS_MSM_GPIO_FLASH is not set
 CONFIG_LEDS_AW2013=y
 
 #
@@ -3784,7 +3791,6 @@ CONFIG_IPA=y
 # CONFIG_IPA3 is not set
 # CONFIG_GSI is not set
 CONFIG_RMNET_IPA=y
-# CONFIG_SSM is not set
 # CONFIG_MSM_MHI is not set
 # CONFIG_PFT is not set
 # CONFIG_I2C_MSM_PROF_DBG is not set
@@ -4134,6 +4140,7 @@ CONFIG_PROC_FS=y
 # CONFIG_PROC_KCORE is not set
 CONFIG_PROC_SYSCTL=y
 CONFIG_PROC_PAGE_MONITOR=y
+# CONFIG_PROC_CHILDREN is not set
 CONFIG_KERNFS=y
 CONFIG_SYSFS=y
 CONFIG_TMPFS=y
@@ -4188,7 +4195,6 @@ CONFIG_CIFS=y
 CONFIG_CIFS_WEAK_PW_HASH=y
 CONFIG_CIFS_UPCALL=y
 CONFIG_CIFS_XATTR=y
-CONFIG_CIFS_POSIX=y
 CONFIG_CIFS_ACL=y
 CONFIG_CIFS_DEBUG=y
 # CONFIG_CIFS_DEBUG2 is not set
