--- a/arch/arm64/configs/gabriel_defconfig
+++ b/arch/arm64/configs/gabriel_defconfig
@@ -535,14 +535,14 @@ CONFIG_ARCH_SUSPEND_POSSIBLE=y
 #
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
-CONFIG_CPU_IDLE_GOV_LADDER=n
+CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
-CONFIG_DT_IDLE_STATES=y
+# CONFIG_DT_IDLE_STATES is not set
 
 #
 # ARM CPU Idle Drivers
 #
-CONFIG_ARM_CPUIDLE=y
+# CONFIG_ARM_CPUIDLE is not set
 # CONFIG_ARCH_NEEDS_CPU_IDLE_COUPLED is not set
 
 #
