Localise audio changes for dts

--- a/arch/arm/boot/dts/qcom/msm8940-pmi8950-qrd-sku7-full.dts
+++ b/arch/arm/boot/dts/qcom/msm8940-pmi8950-qrd-sku7-full.dts
@@ -5761,22 +5761,22 @@
 				qcom,cdc-dmic-sample-rate = <0x249f00>;
 				cdc-vdd-buck-supply = <0xb5>;
 				qcom,cdc-vdd-buck-voltage = <0x1b7740 0x1b7740>;
-				qcom,cdc-vdd-buck-current = <0x9eb10>;
+				qcom,cdc-vdd-buck-current = <750000>;
 				cdc-buck-sido-supply = <0xb5>;
 				qcom,cdc-buck-sido-voltage = <0x1b7740 0x1b7740>;
-				qcom,cdc-buck-sido-current = <0x3d090>;
+				qcom,cdc-buck-sido-current = <300000>;
 				cdc-vdd-tx-h-supply = <0xb6>;
 				qcom,cdc-vdd-tx-h-voltage = <0x1b7740 0x1b7740>;
-				qcom,cdc-vdd-tx-h-current = <0x61a8>;
+				qcom,cdc-vdd-tx-h-current = <75000>;
 				cdc-vdd-rx-h-supply = <0xb6>;
 				qcom,cdc-vdd-rx-h-voltage = <0x1b7740 0x1b7740>;
-				qcom,cdc-vdd-rx-h-current = <0x61a8>;
+				qcom,cdc-vdd-rx-h-current = <75000>;
 				cdc-vdd-px-supply = <0xb6>;
 				qcom,cdc-vdd-px-voltage = <0x1b7740 0x1b7740>;
-				qcom,cdc-vdd-px-current = <0x2710>;
+				qcom,cdc-vdd-px-current = <20000>;
 				cdc-vdd-mic-bias-supply = <0xb7>;
 				qcom,cdc-vdd-mic-bias-voltage = <0x2eebb8 0x2eebb8>;
-				qcom,cdc-vdd-mic-bias-current = <0x3a98>;
+				qcom,cdc-vdd-mic-bias-current = <25000>;
 
 				swr_master {
 					compatible = "qcom,swr-wcd";
@@ -7783,17 +7783,17 @@
 					interrupt-names = "spk_cnp_int", "spk_clip_int", "spk_ocp_int", "ins_rem_det1", "but_rel_det", "but_press_det", "ins_rem_det", "mbhc_int";
 					cdc-vdda-cp-supply = <0x10f>;
 					qcom,cdc-vdda-cp-voltage = <0x1f47d0 0x1f47d0>;
-					qcom,cdc-vdda-cp-current = <0x33450>;
+					qcom,cdc-vdda-cp-current = <700000>;
 					cdc-vdd-io-supply = <0xb6>;
 					qcom,cdc-vdd-io-voltage = <0x1b7740 0x1b7740>;
-					qcom,cdc-vdd-io-current = <0x1388>;
+					qcom,cdc-vdd-io-current = <30000>;
 					cdc-vdd-pa-supply = <0x10f>;
 					qcom,cdc-vdd-pa-voltage = <0x1f47d0 0x1f47d0>;
-					qcom,cdc-vdd-pa-current = <0x3f7a0>;
+					qcom,cdc-vdd-pa-current = <450000>;
 					cdc-vdd-mic-bias-supply = <0xb7>;
 					qcom,cdc-vdd-mic-bias-voltage = <0x2eebb8 0x2eebb8>;
-					qcom,cdc-vdd-mic-bias-current = <0x1388>;
-					qcom,cdc-mclk-clk-rate = <0x927c00>;
+					qcom,cdc-vdd-mic-bias-current = <20000>;
+					qcom,cdc-mclk-clk-rate = <12288000>;
 					qcom,cdc-static-supplies = "cdc-vdd-io", "cdc-vdd-pa", "cdc-vdda-cp";
 					qcom,cdc-on-demand-supplies = "cdc-vdd-mic-bias";
 					qcom,dig-cdc-base-addr = <0xc0f0000>;
@@ -10062,7 +10062,7 @@
 			reg = <0xc051000 0x4 0xc051004 0x4 0xc055000 0x4 0xc052000 0x4>;
 			reg-names = "csr_gp_io_mux_mic_ctl", "csr_gp_io_mux_spkr_ctl", "csr_gp_io_lpaif_pri_pcm_pri_mode_muxsel", "csr_gp_io_mux_quin_ctl";
 			qcom,msm-ext-pa = "primary";
-			qcom,msm-mclk-freq = <0x927c00>;
+			qcom,msm-mclk-freq = <12288000>;
 			qcom,msm-mbhc-hphl-swh = <0x1>;
 			qcom,msm-mbhc-gnd-swh = <0x0>;
 			qcom,msm-hs-micbias-type = "internal";
