--- a/arch/arm64/configs/gabriel_defconfig
+++ b/arch/arm64/configs/gabriel_defconfig
@@ -1290,6 +1290,7 @@ CONFIG_MSM_QDSP6V2_CODECS=y
 CONFIG_MSM_ULTRASOUND=y
 # CONFIG_MSM_MCU_TIME_SYNC is not set
 CONFIG_DTS_EAGLE=y
+CONFIG_AINUR_DTS_HW=y
 
 #
 # Intel MIC Bus Driver
