config enable alucard hotplugs
Signed-off-by: mostafa-z <mostafazarghami@gmail.com>

--- a/arch/arm64/configs/gabriel_defconfig
+++ b/arch/arm64/configs/gabriel_defconfig
@@ -1118,6 +1118,13 @@ CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_HAVE_BPF_JIT=y
 
 #
+# Custom Hotplug drivers
+#
+CONFIG_CUSTOM_HOTPLUG=y
+CONFIG_THUNDERPLUG_CONTROL=n
+CONFIG_ALUCARD_CONTROL=y
+
+#
 # Device Drivers
 #
 
