--- a/arch/arm/boot/dts/qcom/msm8940-pmi8950-qrd-sku7-full.dts
+++ b/arch/arm/boot/dts/qcom/msm8940-pmi8950-qrd-sku7-full.dts
@@ -11631,24 +11631,12 @@
 		i2c3 = "/soc/i2c@78b7000";
 	};
 
-	firmware {
-
+	firmware: firmware {
 		android {
 			compatible = "android,firmware";
-
 			fstab {
 				compatible = "android,fstab";
-
-				vendor {
-					compatible = "android,vendor";
-					dev = "/dev/block/platform/soc/7824900.sdhci/by-name/cust";
-					type = "ext4";
-					mnt_flags = "ro,barrier=1,discard";
-					fsmgr_flags = "wait";
-					status = "ok";
-				};
-
-				system {
+				 system {
 					compatible = "android,system";
 					dev = "/dev/block/platform/soc/7824900.sdhci/by-name/system";
 					type = "ext4";
@@ -11656,6 +11644,7 @@
 					fsmgr_flags = "wait";
 					status = "ok";
 				};
+
 			};
 		};
 	};
